--- a/SpringStuff/SpringStuff/SpringStuff.csproj
+++ b/SpringStuff/SpringStuff/SpringStuff.csproj
@@ -54,6 +54,9 @@
     <Content Include="Content\Spring.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Spring_Mk_II.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
