Moar WiP. Kheb redelijke basis voor 2 veren, vgm werkt ie ook gwn maar ik kijk er nog ff naar. Kheb ook ff een nieuwe clas SpringOperations toegevoegd, maak in deze classes de dingen die met de beweging van de veer te maken heeft (was nodig voor 2 veren enzo).

--- a/SpringStuff/SpringStuff/SpringStuff.csproj
+++ b/SpringStuff/SpringStuff/SpringStuff.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Spring.cs" />
+    <Compile Include="SpringOperations.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
